# clrd

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  claude.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: fix.rs  init.rs  map.rs  mod.rs  scan.rs  schema.rs
src/mapper/: mod.rs  templates.rs
src/scanner/: analyzer.rs  file_walker.rs  mod.rs  reference_graph.rs
src/tui/: mod.rs
src/types/: mod.rs
